# onsight-spots

./: .gitignore  AGENTS.md  README.md  SPOT_TEMPLATE.yaml  pyproject.toml
.github/workflows/: insert-on-merge.yml  rename-etxauri.yml  validate-pr.yml
schema/: spot.schema.json
scripts/: check_duplicates.py  insert.py  rename_spot.py  scrape_grimper.py  update_locations.py  validate.py
spots/: ablon.yaml  ailefroide.yaml  albarracin.yaml  altissimo-landes.yaml  annot.yaml  antrebloc.yaml  arkose-nation.yaml  arkose-prado.yaml  arsine.yaml  arudy.yaml  auberge-espagnole.yaml  autoire.yaml  balme-de-yenne.yaml  bavella.yaml  beaulieu-lausanne.yaml  bergholtz.yaml  bionnassay.yaml  buoux.yaml  calanques.yaml  cantobre.yaml  cap-dramont.yaml  castillon.yaml  ceuse.yaml  chamiers.yaml  chamonix.yaml  chouchou-place.yaml  cimai.yaml  cirque-d-archiane.yaml  claret.yaml  clemont.yaml  climbing-district-bastille.yaml  climbing-district-buttes-chaumont.yaml  climbup-aubervilliers.yaml  climbup-gerland.yaml  climbup-italie.yaml  clisson.yaml  col-de-la-colombiere.yaml  collias.yaml  cormot.yaml  cote-court.yaml  (+176 more)
